--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 		<link rel="stylesheet" href="water.css">
 		<link rel="stylesheet" href="styles.css">
 
-		<script src="https://miraculous-welcome.rknight.me/script.js" data-site="VIHXWOCI" defer></script>
+		<script src="https://cdn.usefathom.com/script.js" data-site="VIHXWOCI" defer></script>
 	</head>
 	<body>
 		<header>
