--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
 
 		<ul>
 			<li><a href="https://github.com/rknightuk/micro-blog-feeds-plugin">Feeds page plugin</a></li>
+			<li><a href="https://github.com/rknightuk/micro-blog-lite-youtube">Lite YouTube for Micro.blog plugin</a></li>
 		</ul>
 
 		<h2>Themes</h2>
