--- a/index.html
+++ b/index.html
@@ -43,6 +43,13 @@
 			<li><a href="https://github.com/rknightuk/micro-blog-lite-youtube">Lite YouTube for Micro.blog plugin</a></li>
 		</ul>
 
+		<h2>Alfred Workflows</h2>
+
+		<ul>
+			<li><a href="https://github.com/rknightuk/alfred-workflows/tree/main/workflows/microposter">MicroPoster - Post to Micro.blog</a></li>
+			<li><a href="https://github.com/rknightuk/alfred-workflows/tree/main/workflows/micromarks">MicroMarks - manage your Micro.blog bookmarks</a></li>
+		</ul>
+
 		<h2>Themes</h2>
 
 		<ul>
