--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
 		<ul>
 			<li><a href="https://github.com/rknightuk/micro-blog-feeds-plugin">Feeds page plugin</a></li>
 			<li><a href="https://github.com/rknightuk/micro-blog-lite-youtube">Lite YouTube for Micro.blog plugin</a></li>
+			<li><a href="https://github.com/rknightuk/micro-blog-fathom-analytics">Fathom Analytics for Micro.blog plugin</a></li>
 		</ul>
 
 		<h2>Alfred Workflows</h2>
