--- a/index.html
+++ b/index.html
@@ -27,8 +27,9 @@
 		<ul>
 			<li><a href="https://micromarks.rknight.me/">Micromarks - Manage your Micro.blog bookmarks</a></li>
 			<li><a href="https://github.com/rknightuk/twitter-to-micro-blog">Convert tweets to markdown files for importing</a></li>
+            <li><a href="https://github.com/rknightuk/echo">Post RSS feeds to Micro.blog</a></li>
 		</ul>
-		
+
 		<h2>Shortcuts</h2>
 
 		<ul>
